--- a/VidCoder/Resources/Translations/EnumsRes.bs.resx
+++ b/VidCoder/Resources/Translations/EnumsRes.bs.resx
@@ -129,9 +129,16 @@
   <data name="Anamorphic_Strict" xml:space="preserve">
     <value>Strogo</value>
   </data>
-  
-  
-  
+  <data name="AppThemeChoice_Auto" xml:space="preserve">
+    <value>Koristi temu OS-a</value>
+    <comment>Windows 10 you can choose Light or Dark for the app theme. This will cause VidCoder to respect that choice.</comment>
+  </data>
+  <data name="AppThemeChoice_Dark" xml:space="preserve">
+    <value>Tamno</value>
+  </data>
+  <data name="AppThemeChoice_Light" xml:space="preserve">
+    <value>Svijetlo</value>
+  </data>
   <data name="CombDetect_fast" xml:space="preserve">
     <value>Brzo</value>
   </data>
@@ -253,9 +260,21 @@
   <data name="VideoRangeType_Seconds" xml:space="preserve">
     <value>Vremenski raspon</value>
   </data>
-  
-  
-  
-  
-  
+  <data name="TitleCapitalizationChoice_EveryWord" xml:space="preserve">
+    <value>Svaku riječ</value>
+    <comment>This will make Blu-ray and DVD titles capitalize every word</comment>
+  </data>
+  <data name="TitleCapitalizationChoice_FirstWord" xml:space="preserve">
+    <value>Prvu riječ</value>
+    <comment>This will make Blu-ray and DVD titles capitalize only the first word</comment>
+  </data>
+  <data name="EncodeCompleteActionType_StopEncoding" xml:space="preserve">
+    <value>Zaustavi enkodiranje</value>
+  </data>
+  <data name="UpdatePromptTiming_OnExit" xml:space="preserve">
+    <value>Pri izlazi</value>
+  </data>
+  <data name="UpdatePromptTiming_OnLaunch" xml:space="preserve">
+    <value>Pri pokretanju</value>
+  </data>
 </root>
